# pysamana

./: README.md  pyproject.toml  setup.py  version.py
debian/: control  control.tmpl
