[build-system]
requires = ["setuptools>=39.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samana_samanagroup"
version = "0.0.1"
authors = [
  { name="Fabian Baena", email="info@samanagroup.com" },
]
description = "Package that containse several libraries necessary for SAMM"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/samanamonitor/pysamana"
"Bug Tracker" = "https://github.com/samanamonitor/pysamana/issues"